<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign UP</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="first_page">First Page</string>
    <string name="second_page">Second Page</string>
    <string name="third_page">Third page</string>
    <string name="Question1">1. Android is -</string>
    <string name="Question2">2. Android is mainly developed for -</string>
    <string name="Question3">3. Which of the following virtual machine is used by the Android operating system?</string>
    <string name="Question4">4. Android is based on which of the following language?</string>
    <string name="Question5">5. APK stands for -</string>
    <string name="Question6">6. What does API stand for?</string>
    <string name="q1o1">an operating system</string>
    <string name="q1o2">a web browser</string>
    <string name="q1o3">a web server</string>
    <string name="q2o1">Servers</string>
    <string name="q2o2">Desktops</string>
    <string name="q2o3">Mobile devices</string>
    <string name="q3o1">JVM</string>
    <string name="q3o2">DVM</string>
    <string name="q3o3">SVM</string>
    <string name="q4o1">C</string>
    <string name="q4o2">Java</string>
    <string name="q4o3">C++</string>
    <string name="q5o1">Android Phone Kit</string>
    <string name="q5o2">Android Page Kit</string>
    <string name="q5o3">Android Package Kit</string>
    <string name="q6o1">Application Programming Interface</string>
    <string name="q6o2">Android Programming Interface</string>
    <string name="q6o3">Android Page Interface</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="result">Result</string>
    <string name="try_again">Try again</string>
</resources>