<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_page"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_weight="3"
        android:orientation="vertical"
        tools:ignore="InefficientWeight">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup

            android:id="@+id/question1RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp">

            <RadioButton
                android:id="@+id/question1option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1o1"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1o2"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1o3"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question2RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2o1"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2o2"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/question2option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2o3"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question3RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3o1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/question3option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3o2"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3o3"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="34sp"
            android:layout_weight="1"
            android:onClick="NextFunction"
            android:text="@string/next"
            android:textSize="28sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="34sp"
            android:layout_weight="1"
            android:onClick="SubmitFunction"
            android:text="@string/submit"
            android:textSize="28sp"
            tools:ignore="ButtonStyle,RtlHardcoded" />

    </LinearLayout>


</LinearLayout>