<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/third_page"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resultID"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:layout_marginBottom="45sp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="38sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="tryAgainFunction"
        android:text="@string/try_again"
        android:textSize="34sp"
        android:textStyle="bold" />
</LinearLayout>